define classes for boxes

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
                 <img src="img/lambda-black.png" alt="Lambda">
                 <div>
                     <a href="">Home</a>
-                    <a href="">About</a>
+                    <a href="about.html">About</a>
                     <a href="">Products</a>
                     <a href="">Blog</a>
                     <a href="">Contact</a>
                 </div>  
             </nav>
         </header>
+
+        <img class="jumbo-img" src="img/jumbo.jpg" alt="blurred lines of traffic at night">
 
         <section class="top-content">
             <div class="text-container">
