refactor index page for basic responsive layout

--- a/about.html
+++ b/about.html
@@ -27,8 +27,10 @@
         </nav>
       </header>
 
-      <img class="jumbo-img" src="img/jumbo-about.png" alt="a city's skyline at sunset">
-
+      <div class="banner">
+        <img src="img/jumbo-about.png" alt="a city's skyline at sunset">
+      </div>
+      
       <section class="full-content top">
           <h2>About</h2>
 
