--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                 </div>  
             </nav>
         </header>
-
-        <img class="jumbo-img" src="img/jumbo.jpg" alt="blurred lines of traffic at night">
+        <div class="banner">
+            <img src="img/jumbo.jpg" alt="blurred lines of traffic at night">
+        </div>
+        
 
         <section class="top-content">
             <div class="text-container">
