add anchor to Lambda logo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                             <a href="#"><li>Contact</li></a>
                     </ul>
                 </div>
-                <img src="img/lambda-black.png" alt="Lambda">
+                <a href="index.html">
+                    <img src="img/lambda-black.png" alt="Lambda">
+                </a>
                 <div class="links">
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
