--- a/about.html
+++ b/about.html
@@ -16,7 +16,9 @@
 
       <header>
         <nav>
-          <img src="img/lambda-black.png" alt="Lambda">
+          <a href="index.html">
+              <img src="img/lambda-black.png" alt="Lambda">
+          </a>
           <div>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
