responsive about page

--- a/about.html
+++ b/about.html
@@ -12,20 +12,35 @@
 </head>
 
 <body>
-    <div class="container about-page">
+    <div class="container">
 
       <header>
         <nav>
+          <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            
+            <ul id="menu">
+              <a href="index.html"><li>Home</li></a>
+              <a href="about.html"><li>About</li></a>
+              <a href="#"><li>Products</li></a>
+              <a href="#"><li>Blog</li></a>
+              <a href="#"><li>Contact</li></a>
+            </ul>
+          </div>
           <a href="index.html">
-              <img src="img/lambda-black.png" alt="Lambda">
+            <img src="img/lambda-black.png" alt="Lambda">
           </a>
-          <div>
+          <div class="links">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="">Products</a>
             <a href="">Blog</a>
             <a href="">Contact</a>
-          </div>  
+          </div>
+          <div class="dummy"></div>
         </nav>
       </header>
 
